<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/photoUser"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circle_image"
        android:src="@drawable/ic_menu_camera"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_profile"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname_profile"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_profile"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_profile"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/addresUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direcci_n_profile"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Guardar"/>
    </RelativeLayout>

</LinearLayout>