<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CreateNewPet">

    <ImageButton
        android:id="@+id/photoPet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circle_image"
        android:src="@drawable/ic_menu_camera"
        />

    <EditText
        android:id="@+id/petName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_profile"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/kindOfPetCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kindOfPetCreate"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/petBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addBreed_CreateNewPet"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:id="@+id/petAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Age_CreateNewPet"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Crear"/>
    </RelativeLayout>



</LinearLayout>