<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardMedicalRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/dateClinicRecord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_consultation"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TagIdconsultation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/consultation_tag_record_consultation"/>
            <TextView
                android:id="@+id/idconsultation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:text="Motivo de la consulta"/>
            <TextView
                android:id="@+id/TagIdPrescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/prescription_record_medic"/>
            <TextView
                android:id="@+id/idPrescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:text="lo que el medico receta"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>